--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project_2",
   "engines": {
-      "node": "14.17.0"
+    "node": "14.17.0"
   },
   "version": "1.0.0",
   "description": "",
@@ -21,9 +21,11 @@
   },
   "homepage": "https://github.com/tommyc93/Project_2#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "method-override": "^3.0.0",
     "mongoose": "^5.13.3"
   }
